# flexisip

./: .clang-format  .clang-tidy  .clangd  .cproject  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .project  AUTHORS  CHANGELOG.md  CMakeLists.txt  Makefile.am  NEWS  README  README.macosx  README.md  autogen.sh  configure.ac  data-model.xsd  dump.rdb  flake.nix  flexisip.spec.in  flexisip_tester_script  prepare.py  rpid.xsd  sanitizer_ignore.txt  sanitizer_ignore_debian11.txt  sanitizer_ignore_rocky8.txt  shell.nix
doc/: GFDL.txt  Makefile.am  README  dk.py  dokuwiki.py  flexisip_guide.tex  flexiwiki.py  latex_include_generator.sh  mediawiki.py  mw.py  update_wikidoc.sh  update_xwiki.sh  xw.py
include/: CMakeLists.txt  gitversion.cmake
include/flexisip/: agent.hh  auth-module.hh  auth-status.hh  common.hh  configmanager.hh  entryfilter.hh  event.hh  eventlogs.hh  expressionparser-impl.cc  expressionparser.hh  flexisip-exception.hh  forkbasiccontext.hh  forkcallcontext.hh  forkcontext.hh  forkmessagecontext.hh  global.hh  logmanager.hh  module-auth.hh  module-authentication-base.hh  module-pushnotification.hh  module-registrar.hh  module-router-interface.hh  module-router.hh  module.hh  plugin.hh  push-param.hh  registrardb.hh  sip-boolean-expressions.hh  template-metaprogramming.hh  transaction.hh  transport.hh
scripts/: CMakeLists.txt  Makefile.am  firebase_v1_get_access_token.py  flexisip-b2bua.service.in  flexisip-b2bua@.service.in  flexisip-conference.service.in  flexisip-conference@.service.in  flexisip-linphone-daemon.service.in  flexisip-logrotate  flexisip-presence.service.in  flexisip-presence@.service.in  flexisip-proxy.service.in  flexisip-proxy@.service.in  flexisip-regevent.service.in  flexisip-regevent@.service.in  flexisip-voicemail.service.in  flexisip-voicemail@.service.in  flexisip.bash-completion  flexisip.conf.sample  flexisip.service.in  flexisip@.service.in  flexisip_cli.py  flexisip_monitor.py  flexisip_stats.py  gitversion.sh  update_debian_changelog.sh  userdb.conf
scripts/debian/: Makefile.am  flexisip  flexisip-presence.in  flexisip.in  update_debian_changelog.sh
scripts/redhat/: Makefile.am  flexisip  flexisip-presence.in  flexisip.in
scripts/yocto/: Makefile.am  flexisip.in
share/: CMakeLists.txt  authdb-file-grammar  authdb-file-grammar.txt
src/: .service-server.hh.kate-swp  CMakeLists.txt  Makefile.am  agent-interface.hh  agent-startlogwriter.cc  agent.cc  agent.hh  auth-odbc.cc  auth-odbc.hh  authdb-file.cc  authdb-odbc.cc  authdb-soci.cc  authdb.cc  authdb.hh  cJSON.c  cJSON.h  callcontext-mediarelay.cc  callcontext-mediarelay.hh  callcontext-transcoder.cc  callcontext-transcoder.hh  callcontext.cc  callcontext.hh  callstore.cc  callstore.hh  cli.cc  cli.hh  common.cc  common.hh  conditional-routes.cc  conditional-routes.hh  configdumper.cc  configdumper.hh  configmanager.cc  configmanager.hh  configparsing-exception.hh  contact-masquerader.cc  contact-masquerader.hh  domain-registrations.cc  domain-registrations.hh  dos-protection.cc  (+131 more)
src/accounts-store/: CMakeLists.txt  accounts-data-manager.hh  accounts-store.cc  accounts-store.hh  fam-data.cc  fam-data.hh  file-data.cc  file-data.hh
src/apn/: pushnotification.cc  pushnotification.h  pushnotificationclient.cc  pushnotificationclient.h  pushnotificationservice.cc  pushnotificationservice.h
src/auth/: auth-module.cc  auth-module.hh  auth-scheme.hh  auth-status.hh  bearer-auth.cc  bearer-auth.hh  digest-authentifier-base.cc  digest-authentifier.cc  digest-authentifier.hh  domains-store.cc  domains-store.hh  external-auth-module.cc  external-auth-module.hh  flexisip-auth-module-base.cc  flexisip-auth-module-base.hh  flexisip-auth-module.cc  flexisip-auth-module.hh  flexisip-auth-status.hh  from-domain-authentifier.cc  from-domain-authentifier.hh  nonce-store.cc  nonce-store.hh  preferred-identity.hh  realm-extractor.hh  tls-client-authentifier.cc  tls-client-authentifier.hh  trusted-host-authentifier.cc  trusted-host-authentifier.hh
src/b2bua/: CMakeLists.txt  application.hh  async-stop-core.cc  async-stop-core.hh  b2bua-core.cc  b2bua-core.hh  b2bua-server.cc  b2bua-server.hh  call-transfer-listener.hh  external-provider-bridge.cc  external-provider-bridge.hh  trenscrypter.cc  trenscrypter.hh
src/compat/: filesystem.hh  optional.hh  scope-in-experimental.hh
src/conference/: chatroom-prefix.hh  conference-address-generator.cc  conference-address-generator.hh  conference-server.cc  conference-server.hh  conference.cc  conference.hh  deprecated-config.cc  participant-capabilities-check.cc  participant-capabilities-check.hh  participant-devices-search.cc  participant-devices-search.hh  participant-registration-subscription-handler.cc  participant-registration-subscription-handler.hh  participant-registration-subscription.cc  participant-registration-subscription.hh  registration-subscription.cc  registration-subscription.hh
src/db/: db-transaction.hh
src/dos/: module-dos.cc
src/eventlogs/: eventlogs-soci.cc  eventlogs.cc  eventlogs.hh  eventlogsdb-odb.cxx  eventlogsdb-odb.hxx  eventlogsdb-odb.ixx  eventlogsdb.cc  eventlogsdb.hh  eventlogsdb.xml
src/exceptions/: bad-configuration.hh  exit.hh  (+3 more)
tester/: CMakeLists.txt  agent-tester.cc  apns-mock.cc  apns-mock.hh  b2bua-tester.cc  boolean-expressions.cc  cli-tester.cc  conference-tester.cc  domain-registration-tester.cc  extended-contact-tester.cc  flexisip-tester-config.hh.in  fork-call-tester.cc  fork-context-mysql-tester.cc  fork-context-tester.cc  latch.cc  latch.hh  listening-socket.cc  listening-socket.hh  mediarelay-tester.cc  module-dos-tester.cc  module-info-tester.cc  module-pushnotification-tester.cc  module-registrar-tester.cc  module-router-tester.cc  module-toolbox-tester.cc  msg-sip-tester.cc  pns-mock.cc  pns-mock.hh  push-notification-tester.cc  register-tester.cc  registrardb-redis-tester.cc  registrardb-tester.cc  registration-event-tester.cc  router-tester.cc  schedule-injector-tester.cc  sip-uri-tester.cc  sip-uri-tests.cc  sofia-driven-signal-handler-tester.cc  sofia-tester.cc  tester.cc  (+4 more)
(+1359 files in other folders)
